--- a/app/views/settings/_redmine_issue_repeat.html.erb
+++ b/app/views/settings/_redmine_issue_repeat.html.erb
@@ -31,6 +31,7 @@
       <th>anchor_hour</th>
       <th>anchor_day</th>
       <th>backup_anchor_day</th>
+      <th>Aktion</th>
     </tr>
   </thead>
   <tbody>
@@ -47,6 +48,9 @@
       <td><%= s.anchor_hour %></td>
       <td><%= s.anchor_day %></td>
       <td><%= s.backup_anchor_day %></td>
+      <td>
+        <%= button_to 'Jetzt wiederholen', redmine_issue_repeat_repeat_now_issue_path(s.issue_id), method: :post, data: { confirm: 'Sofort eine Kopie erstellen?' } %>
+      </td>
     </tr>
   <% end %>
   </tbody>
