--- a/app/views/settings/_redmine_issue_repeat.html.erb
+++ b/app/views/settings/_redmine_issue_repeat.html.erb
@@ -21,7 +21,18 @@
   <%= text_field_tag 'settings[copy_issue_bg_color]', (settings['copy_issue_bg_color'] || '#fffbe6'), placeholder: '#fffbe6' %>
   <br/>
   <em>Beispiel: #ffd966, rgb(255,217,102) oder "lightyellow"</em>
-  
+</p>
+
+<p>
+  <%= check_box_tag 'settings[add_prefix_to_copied_issues]', '1', (settings['add_prefix_to_copied_issues'] == '1' || settings['add_prefix_to_copied_issues'] == true) %>
+  <label for="settings_add_prefix_to_copied_issues">Präfix vor kopierte Ticket-Namen setzen</label>
+</p>
+
+<p>
+  <label>Präfix-Zeichen für kopierte Tickets</label>
+  <%= text_field_tag 'settings[copied_issue_prefix]', (settings['copied_issue_prefix'].presence || '➚'), placeholder: '➚' %>
+  <br/>
+  <em>Das Zeichen wird mit einem Leerzeichen vor dem Ticket-Namen gesetzt (z.B. ➚ Ticketname)</em>
 </p>
 
 <h3>Wiederholungs-Zeitpläne</h3>
